# Vox3D

./: .gitignore  CMakeLists.txt  Makefile  README.md  a  appr  c  m  r  versions.md
config/: app.json
res/lang/: en.json  uk.json
src/: app.cpp  app.hpp  app_config.hpp  config_loader.cpp  config_loader.hpp  confirm_dialog.cpp  confirm_dialog.hpp  logger.cpp  logger.hpp  main.cpp  map_package.cpp  map_package.hpp  menu.cpp  menu.hpp  process_metrics.cpp  process_metrics.hpp  ui_draw.cpp  ui_draw.hpp  ui_fonts.hpp  ui_labels.cpp  ui_labels.hpp  ui_layout.hpp  window_config.cpp  window_config.hpp  workspace.cpp  workspace.hpp
src/vox3d/chunk/: chunk_grid.cpp  chunk_grid.hpp
src/vox3d/core/: result.hpp  types.hpp
src/vox3d/inspect/: map_inspector.cpp  map_inspector.hpp
src/vox3d/map/: map_package.cpp  map_package.hpp  runtime_map.cpp  runtime_map.hpp  vxmap_runtime_reader.cpp  vxmap_runtime_reader.hpp
src/vox3d/mesh/: chunk_mesh_builder.cpp  chunk_mesh_builder.hpp  chunk_mesh_cache.cpp  chunk_mesh_cache.hpp  face.hpp  face_visibility.cpp  face_visibility.hpp  mesh_data.hpp  terrain_mesh_builder.cpp  terrain_mesh_builder.hpp
src/vox3d/movement/: movement_probe.cpp  movement_probe.hpp
src/vox3d/path/: path_probe.cpp  path_probe.hpp
src/vox3d/render/: chunk_visibility.cpp  chunk_visibility.hpp
src/vox3d/render_raylib/: chunk_mesh_preview.cpp  chunk_mesh_preview.hpp  free_fly_camera.cpp  free_fly_camera.hpp  map_2d_view.cpp  map_2d_view.hpp
src/vox3d/transition/: transition_feature.cpp  transition_feature.hpp
src/vox3d/validation/: passability_validator.cpp  passability_validator.hpp
src/vox3d/voxel/: block.hpp  voxel_world.cpp  voxel_world.hpp
